Wed Oct  7 13:33:44 UTC 2009  Johnny Willemsen <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.cpp
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.h
          Refactored the connector into a template

Wed Oct  7 13:33:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/AMI/AMI.idl:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_MyFoo_i.h:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_MyFoo_i.cpp:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.h:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Hello_Base/Hello_Base.idl:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender.idl:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
        * connectors/ami4ccm/examples/Hello/descriptors/Plan.cdp:
          Renamed module interface of Hello_Base and AMI.

Wed Oct  7 13:15:22 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/AMI/AMI.idl:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_MyFoo_i.h:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_MyFoo_i.cpp:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.h:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Hello_Base/Hello.idl:
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver.idl:
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender.idl:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
          Changed name of module CCM_AMI into Hello.
